--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "kitloong/laravel-migrations-generator": "^6.2",
         "laracademy/generators": "^3.6",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
